# MichaelPlayer

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main.qml  makeprj.bat
MainWindow/: CMakeLists.txt  MainWIndowControl.cpp  MainWIndowControl.h
